syntax = "proto2";

import "common/request.proto";

package specpaxos.pbft.proto;

message RequestMessage {
    required specpaxos.Request req = 1;
}

message ReplyMessage {
    optional uint64 view = 1;
    optional uint64 opnum = 2;
    required uint64 replicaid = 3;
    required specpaxos.Request req = 4;
    required bytes reply = 5;
}

message UnloggedRequestMessage {
    required specpaxos.UnloggedRequest req = 1;
}

message UnloggedReplyMessage {
    required bytes reply = 1;
}
